Started workig on basic ECS implementation.
Added registry, an object where you can register systems and components, and bind them to entities.

--- a/TetrisEngine/TetrisEngine.vcxproj.filters
+++ b/TetrisEngine/TetrisEngine.vcxproj.filters
@@ -5,13 +5,43 @@
     <ClInclude Include="Deleters.h">
       <Filter>Util</Filter>
     </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineConcepts.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseComponent.h">
+      <Filter>ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseSystem.h">
+      <Filter>ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="Registry.h">
+      <Filter>ECS</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TetrisEngine.cpp" />
+    <ClCompile Include="Entity.cpp">
+      <Filter>ECS</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseComponent.cpp">
+      <Filter>ECS</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseSystem.cpp">
+      <Filter>ECS</Filter>
+    </ClCompile>
+    <ClCompile Include="Registry.cpp">
+      <Filter>ECS</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Util">
       <UniqueIdentifier>{3b558685-24e1-4061-bd69-7ad3c9862534}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ECS">
+      <UniqueIdentifier>{8362cd3c-d1fe-4f1f-b3b1-e09474f03cb7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
