--- a/TetrisEngine/TetrisEngine.vcxproj
+++ b/TetrisEngine/TetrisEngine.vcxproj
@@ -19,10 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseComponent.h" />
+    <ClInclude Include="BaseSystem.h" />
+    <ClInclude Include="EngineConcepts.h" />
     <ClInclude Include="Deleters.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Registry.h" />
     <ClInclude Include="TetrisEngine.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseComponent.cpp" />
+    <ClCompile Include="BaseSystem.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Registry.cpp" />
     <ClCompile Include="TetrisEngine.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
