--- a/TetrisEngine/TetrisEngine.vcxproj.filters
+++ b/TetrisEngine/TetrisEngine.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClInclude Include="Registry.h">
       <Filter>ECS</Filter>
     </ClInclude>
+    <ClInclude Include="Singleton.h">
+      <Filter>Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TetrisEngine.cpp" />
