Added a dynamic bitset class.
This dynamic bitset class is used as an aid to check if an entity has a component or not. We need this to be dynamic because at compile time we don't know how many components there are.

--- a/TetrisEngine/TetrisEngine.vcxproj.filters
+++ b/TetrisEngine/TetrisEngine.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="GraphicsSystem.h">
       <Filter>Systems</Filter>
     </ClInclude>
+    <ClInclude Include="DynamicBitset.h">
+      <Filter>Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TetrisEngine.cpp" />
@@ -55,6 +58,9 @@
     </ClCompile>
     <ClCompile Include="GraphicsSystem.cpp">
       <Filter>Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="DynamicBitset.cpp">
+      <Filter>Util</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
