--- a/TetrisEngine/TetrisEngine.vcxproj
+++ b/TetrisEngine/TetrisEngine.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="BaseSystem.h" />
+    <ClInclude Include="DynamicBitset.h" />
     <ClInclude Include="EngineConcepts.h" />
     <ClInclude Include="Deleters.h" />
     <ClInclude Include="Entity.h" />
@@ -34,6 +35,7 @@
   <ItemGroup>
     <ClCompile Include="BaseComponent.cpp" />
     <ClCompile Include="BaseSystem.cpp" />
+    <ClCompile Include="DynamicBitset.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GraphicsSystem.cpp" />
     <ClCompile Include="InputManager.cpp" />
